--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FONTE GOOGLE -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- FIM FONTE GOOGLE -->
     <link rel="stylesheet" href="styles/style.css">
     <title>Meus Projetos</title>
 </head>
 <body>
     <header>
 
-        <div class="interface">
+        <div class="interface"> <!--INTERFACE-->
 
-            <div class="logo">
+            <div class="logo"><!--LOGO-->
                 <a href="">
-                    <img src="imagens/logo.png" alt="logo">
+                    <img src="imagens/Logo.svg" alt="logo" width="130" height="130">
                 </a>
-            </div><!--LOGO-->
+            </div><!--FIM LOGO-->
 
             <nav class="menu-desktop">
                 <ul>
@@ -32,7 +37,7 @@
                 </a>
             </div>
 
-        </div> <!--INTERFACE-->
+        </div><!--FIM INTERFACE-->
 
     </header>
 </body>
