--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 <body>
     <header>
 
-        <div class="interface"> <!--INTERFACE-->
+        <div class="interface">
 
-            <div class="logo"><!--LOGO-->
+            <div class="logo">
                 <a href="">
                     <img src="imagens/Logo.svg" alt="logo" width="130" height="130">
                 </a>
-            </div><!--FIM LOGO-->
-
+            </div>
             <nav class="menu-desktop">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -30,15 +29,35 @@
                     <li><a href="#">Projetos</a></li>
                 </ul>
             </nav>
-
             <div class="btn-contato">
                 <a href="#">
                     <button>Contato</button>
                 </a>
             </div>
-
-        </div><!--FIM INTERFACE-->
+        </div>
 
     </header>
+
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit reiciendis labore, eum quo maxime aliquid repudiandae aperiam in iusto ad nihil quis quod dicta dignissimos molestiae hic temporibus repellendus eaque.</p>
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em Contato</button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="img-topo-site">
+                        <img src="imagens/pessoa.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
