--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- FIM FONTE GOOGLE -->
+    <!--BOOTSTRAP ICONS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--BOOTSTRAP ICONS-->
     <link rel="stylesheet" href="styles/style.css">
     <title>Meus Projetos</title>
 </head>
 <body>
-    <header>
+    <header><!--HEADER-->
 
         <div class="interface">
 
@@ -36,9 +39,9 @@
             </div>
         </div>
 
-    </header>
+    </header><!--HEADER-->
 
-    <main>
+    <main><!--MAIN-->
         <section class="topo-do-site">
             <div class="interface">
                 <div class="flex">
@@ -57,7 +60,36 @@
                 </div>
             </div>
         </section>
-    </main>
+
+        <section class="especialidades">
+            <div class="interface">
+                <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
+                <div class="flex">
+                    <div class="especialidades-box">
+                        <i class="bi bi-code-slash"></i>
+                        <h3>WebSite</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus reiciendis nostrum at libero asperiores quod doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio mollitia totam autem soluta maiores.</p>
+                    </div>
+                    <div class="especialidades-box">
+                        <i class="bi bi-cart"></i>
+                        <h3>Loja Online</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus reiciendis nostrum at libero asperiores quod doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio mollitia totam autem soluta maiores.</p>
+                    </div>
+                    <div class="especialidades-box">
+                        <i class="bi bi-wordpress"></i>
+                        <h3>Blog</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus reiciendis nostrum at libero asperiores quod doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio mollitia totam autem soluta maiores.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sobre">
+            <div class="interface">
+                
+            </div>
+        </section>
+    </main><!--MAIN-->
 
 </body>
 </html>
