section sobre concluida

--- a/index.html
+++ b/index.html
@@ -86,7 +86,21 @@
 
         <section class="sobre">
             <div class="interface">
-                
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="imagens/pessoa-foto.svg" alt="">
+                    </div>
+                    <div class="txt-sobre">
+                        <h2>MUITO PRAZER, <span>SOU FULANO DE TAL.</span></h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, libero porro cumque illum quisquam possimus! Ad expedita sit temporibus molestiae, eum ab praesentium, odio corporis error, aut fuga aspernatur recusandae?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, optio. Minima sequi, commodi aliquid aliquam similique hic quaerat quasi in, vitae tempore adipisci reprehenderit consectetur qui accusamus a veritatis totam.</p>
+                        <div class="btn-social">
+                            <a href="https://www.instagram.com/lucasgabrieldev/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://github.com/Lucassevero06" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                            <a href="https://www.linkedin.com/in/lucas-gabriel-de-silva-vaz-severo-b88061296/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main><!--MAIN-->
