--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header><!--HEADER-->
 
     <main><!--MAIN-->
-        <section class="topo-do-site">
+        <section class="topo-do-site"> <!--TOPO DO SITE-->
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <section class="especialidades">
+        <section class="especialidades"> <!--ESPECIALIDADES-->
             <div class="interface">
                 <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
                 <div class="flex">
@@ -84,7 +84,7 @@
             </div>
         </section>
 
-        <section class="sobre">
+        <section class="sobre"> <!--SOBRE-->
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
