--- a/index.html
+++ b/index.html
@@ -103,6 +103,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="portifolio"> <!--PORTIFOLIO-->
+            <div class="interface">
+                <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
+                <div class="flex">
+                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
+                        <div class="overlay">Projeto 1</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
+                        <div class="overlay">Projeto 2</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
+                        <div class="overlay">Projeto 3</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main><!--MAIN-->
 
 </body>
