--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="overlay">Projeto 2</div>
                     </div>
                     <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
-                        <div class="overlay">Projeto 3</div>
+                        <div class="overlay">Projeto 3s</div>
                     </div>
                 </div>
             </div>
