--- a/index.html
+++ b/index.html
@@ -120,7 +120,43 @@
                 </div>
             </div>
         </section>
+
+        <section class="formulario">
+            <div class="interface">
+                <h2 class="titulo">FALA <span>COMIGO</span>.</h2>
+                
+                <form action="">
+
+                    <input type="text" name="" id="" placeholder="Seu nome:" required>
+                    <input type="email" name="" id="" placeholder="Seu e-email:" required>
+                    <input type="number" name="" id="" placeholder="Seu celular:">
+                    <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                    <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
+
+                </form>
+            </div>
+        </section>
     </main><!--MAIN-->
+
+    <footer><!--RODAPÉ-->
+        <div class="interface">
+            <div class="line-footer">
+                <div class="flex">
+                    <div class="logo-footer">
+                        <img src="imagens/Logo.svg" alt="Logo" width="110" height="110">
+                    </div>
+                    <div class="btn-social">
+                        <a href="https://www.instagram.com/lucasgabrieldev/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
+                        <a href="https://github.com/Lucassevero06" target="_blank"><button><i class="bi bi-github"></i></button></a>
+                        <a href="https://www.linkedin.com/in/lucas-gabriel-de-silva-vaz-severo-b88061296/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="line-footer borda">
+                <p><i class="bi bi-envelope-at"></i> <a href="mailto:lucasgabriel31032006@gmail.com">lucasgabriel31032006@gmail.com</a></p>
+            </div>
+        </div>
+    </footer><!--RODAPÉ-->
 
 </body>
 </html>
