--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </section>
 
-        <section class="formulario">
+        <section class="formulario"> <!--FALA COMIGO-->
             <div class="interface">
                 <h2 class="titulo">FALA <span>COMIGO</span>.</h2>
                 
