--- a/index.html
+++ b/index.html
@@ -1,162 +1,249 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- FONTE GOOGLE -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- FIM FONTE GOOGLE -->
     <!--BOOTSTRAP ICONS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <!--BOOTSTRAP ICONS-->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Meus Projetos</title>
-</head>
-<body>
-    <header><!--HEADER-->
+  </head>
+  <body>
+    <header>
+      <!--HEADER-->
 
+      <div class="interface">
+        <div class="logo">
+          <a href="">
+            <img src="imagens/Logo.svg" alt="logo" width="130" height="130" />
+          </a>
+        </div>
+        <nav class="menu-desktop">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Especialidades</a></li>
+            <li><a href="#">Sobre mim</a></li>
+            <li><a href="#">Projetos</a></li>
+          </ul>
+        </nav>
+        <div class="btn-contato">
+          <a href="#">
+            <button>Contato</button>
+          </a>
+        </div>
+      </div>
+    </header>
+    <!--HEADER-->
+
+    <main>
+      <!--MAIN-->
+      <section class="topo-do-site">
+        <!--TOPO DO SITE-->
         <div class="interface">
-
-            <div class="logo">
-                <a href="">
-                    <img src="imagens/Logo.svg" alt="logo" width="130" height="130">
-                </a>
-            </div>
-            <nav class="menu-desktop">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Especialidades</a></li>
-                    <li><a href="#">Sobre mim</a></li>
-                    <li><a href="#">Projetos</a></li>
-                </ul>
-            </nav>
-            <div class="btn-contato">
+          <div class="flex">
+            <div class="txt-topo-site">
+              <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                reiciendis labore, eum quo maxime aliquid repudiandae aperiam in
+                iusto ad nihil quis quod dicta dignissimos molestiae hic
+                temporibus repellendus eaque.
+              </p>
+              <div class="btn-contato">
                 <a href="#">
-                    <button>Contato</button>
+                  <button>Entre em Contato</button>
                 </a>
+              </div>
             </div>
+            <div class="img-topo-site">
+              <img src="imagens/pessoa.svg" alt="" />
+            </div>
+          </div>
         </div>
+      </section>
 
-    </header><!--HEADER-->
-
-    <main><!--MAIN-->
-        <section class="topo-do-site"> <!--TOPO DO SITE-->
-            <div class="interface">
-                <div class="flex">
-                    <div class="txt-topo-site">
-                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit reiciendis labore, eum quo maxime aliquid repudiandae aperiam in iusto ad nihil quis quod dicta dignissimos molestiae hic temporibus repellendus eaque.</p>
-                        <div class="btn-contato">
-                            <a href="#">
-                                <button>Entre em Contato</button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="img-topo-site">
-                        <img src="imagens/pessoa.svg" alt="">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="especialidades"> <!--ESPECIALIDADES-->
-            <div class="interface">
-                <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
-                <div class="flex">
-                    <div class="especialidades-box">
-                        <i class="bi bi-code-slash"></i>
-                        <h3>WebSite</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus reiciendis nostrum at libero asperiores quod doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio mollitia totam autem soluta maiores.</p>
-                    </div>
-                    <div class="especialidades-box">
-                        <i class="bi bi-cart"></i>
-                        <h3>Loja Online</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus reiciendis nostrum at libero asperiores quod doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio mollitia totam autem soluta maiores.</p>
-                    </div>
-                    <div class="especialidades-box">
-                        <i class="bi bi-wordpress"></i>
-                        <h3>Blog</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus reiciendis nostrum at libero asperiores quod doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio mollitia totam autem soluta maiores.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="sobre"> <!--SOBRE-->
-            <div class="interface">
-                <div class="flex">
-                    <div class="img-sobre">
-                        <img src="imagens/pessoa-foto.svg" alt="">
-                    </div>
-                    <div class="txt-sobre">
-                        <h2>MUITO PRAZER, <span>SOU FULANO DE TAL.</span></h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, libero porro cumque illum quisquam possimus! Ad expedita sit temporibus molestiae, eum ab praesentium, odio corporis error, aut fuga aspernatur recusandae?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, optio. Minima sequi, commodi aliquid aliquam similique hic quaerat quasi in, vitae tempore adipisci reprehenderit consectetur qui accusamus a veritatis totam.</p>
-                        <div class="btn-social">
-                            <a href="https://www.instagram.com/lucasgabrieldev/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
-                            <a href="https://github.com/Lucassevero06" target="_blank"><button><i class="bi bi-github"></i></button></a>
-                            <a href="https://www.linkedin.com/in/lucas-gabriel-de-silva-vaz-severo-b88061296/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="portifolio"> <!--PORTIFOLIO-->
-            <div class="interface">
-                <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
-                <div class="flex">
-                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
-                        <div class="overlay">Projeto 1</div>
-                    </div>
-                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
-                        <div class="overlay">Projeto 2</div>
-                    </div>
-                    <div class="img-port" style="background-image: url(imagens/imagem.jpg);">
-                        <div class="overlay">Projeto 3s</div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="formulario"> <!--FALA COMIGO-->
-            <div class="interface">
-                <h2 class="titulo">FALA <span>COMIGO</span>.</h2>
-                
-                <form action="">
-
-                    <input type="text" name="" id="" placeholder="Seu nome:" required>
-                    <input type="email" name="" id="" placeholder="Seu e-email:" required>
-                    <input type="number" name="" id="" placeholder="Seu celular:">
-                    <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
-                    <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
-
-                </form>
-            </div>
-        </section>
-    </main><!--MAIN-->
-
-    <footer><!--RODAPÉ-->
+      <section class="especialidades">
+        <!--ESPECIALIDADES-->
         <div class="interface">
-            <div class="line-footer">
-                <div class="flex">
-                    <div class="logo-footer">
-                        <img src="imagens/Logo.svg" alt="Logo" width="110" height="110">
-                    </div>
-                    <div class="btn-social">
-                        <a href="https://www.instagram.com/lucasgabrieldev/" target="_blank"><button><i class="bi bi-instagram"></i></button></a>
-                        <a href="https://github.com/Lucassevero06" target="_blank"><button><i class="bi bi-github"></i></button></a>
-                        <a href="https://www.linkedin.com/in/lucas-gabriel-de-silva-vaz-severo-b88061296/" target="_blank"><button><i class="bi bi-linkedin"></i></button></a>
-                    </div>
-                </div>
+          <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
+          <div class="flex">
+            <div class="especialidades-box">
+              <i class="bi bi-code-slash"></i>
+              <h3>WebSite</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Doloribus reiciendis nostrum at libero asperiores quod
+                doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio
+                mollitia totam autem soluta maiores.
+              </p>
             </div>
-            <div class="line-footer borda">
-                <p><i class="bi bi-envelope-at"></i> <a href="mailto:lucasgabriel31032006@gmail.com">lucasgabriel31032006@gmail.com</a></p>
+            <div class="especialidades-box">
+              <i class="bi bi-cart"></i>
+              <h3>Loja Online</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Doloribus reiciendis nostrum at libero asperiores quod
+                doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio
+                mollitia totam autem soluta maiores.
+              </p>
             </div>
+            <div class="especialidades-box">
+              <i class="bi bi-wordpress"></i>
+              <h3>Blog</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Doloribus reiciendis nostrum at libero asperiores quod
+                doloremque quas vel laudantium. Ullam nemo rem illum quis? Odio
+                mollitia totam autem soluta maiores.
+              </p>
+            </div>
+          </div>
         </div>
-    </footer><!--RODAPÉ-->
+      </section>
 
-</body>
+      <section class="sobre">
+        <!--SOBRE-->
+        <div class="interface">
+          <div class="flex">
+            <div class="img-sobre">
+              <img src="imagens/pessoa-foto.svg" alt="" />
+            </div>
+            <div class="txt-sobre">
+              <h2>MUITO PRAZER, <span>SOU FULANO DE TAL.</span></h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure,
+                libero porro cumque illum quisquam possimus! Ad expedita sit
+                temporibus molestiae, eum ab praesentium, odio corporis error,
+                aut fuga aspernatur recusandae?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Tenetur, optio. Minima sequi, commodi aliquid aliquam similique
+                hic quaerat quasi in, vitae tempore adipisci reprehenderit
+                consectetur qui accusamus a veritatis totam.
+              </p>
+              <div class="btn-social">
+                <a
+                  href="https://www.instagram.com/lucasgabrieldev/"
+                  target="_blank"
+                  ><button><i class="bi bi-instagram"></i></button
+                ></a>
+                <a href="https://github.com/Lucassevero06" target="_blank"
+                  ><button><i class="bi bi-github"></i></button
+                ></a>
+                <a
+                  href="https://www.linkedin.com/in/lucas-gabriel-de-silva-vaz-severo-b88061296/"
+                  target="_blank"
+                  ><button><i class="bi bi-linkedin"></i></button
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="portifolio">
+        <!--PORTIFOLIO-->
+        <div class="interface">
+          <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
+          <div class="flex">
+            <div
+              class="img-port"
+              style="background-image: url(imagens/imagem.jpg)"
+            >
+              <div class="overlay">Projeto 1</div>
+            </div>
+            <div
+              class="img-port"
+              style="background-image: url(imagens/imagem.jpg)"
+            >
+              <div class="overlay">Projeto 2</div>
+            </div>
+            <div
+              class="img-port"
+              style="background-image: url(imagens/imagem.jpg)"
+            >
+              <div class="overlay">Projeto 3</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="formulario">
+        <!--FALA COMIGO-->
+        <div class="interface">
+          <h2 class="titulo">FALA <span>COMIGO</span>.</h2>
+
+          <form action="">
+            <input type="text" name="" id="" placeholder="Seu nome:" required />
+            <input
+              type="email"
+              name=""
+              id=""
+              placeholder="Seu e-email:"
+              required
+            />
+            <input type="number" name="" id="" placeholder="Seu celular:" />
+            <textarea
+              name=""
+              id=""
+              placeholder="Sua mensagem"
+              required
+            ></textarea>
+            <div class="btn-enviar"><input type="submit" value="ENVIAR" /></div>
+          </form>
+        </div>
+      </section>
+    </main>
+    <!--MAIN-->
+
+    <footer>
+      <!--RODAPÉ-->
+      <div class="interface">
+        <div class="line-footer">
+          <div class="flex">
+            <div class="logo-footer">
+              <img src="imagens/Logo.svg" alt="Logo" width="110" height="110" />
+            </div>
+            <div class="btn-social">
+              <a
+                href="https://www.instagram.com/lucasgabrieldev/"
+                target="_blank"
+                ><button><i class="bi bi-instagram"></i></button
+              ></a>
+              <a href="https://github.com/Lucassevero06" target="_blank"
+                ><button><i class="bi bi-github"></i></button
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/lucas-gabriel-de-silva-vaz-severo-b88061296/"
+                target="_blank"
+                ><button><i class="bi bi-linkedin"></i></button
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="line-footer borda">
+          <p>
+            <i class="bi bi-envelope-at"></i>
+            <a href="mailto:lucasgabriel31032006@gmail.com"
+              >lucasgabriel31032006@gmail.com</a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
+    <!--RODAPÉ-->
+  </body>
 </html>
